# giga-open-cost-model

./: .dockerignore  .gitattributes  .gitconfig  .gitignore  Dockerfile  Dockerfile.hub  NOTICE  README.md  dev  generateReport-PDF.ipynb  pyproject.toml  run  stack
conf/: config.yaml
conf/countries/: brazil.json  rwanda.json  sample.json  sierra_leone.json
conf/data/: brazil.yaml  rwanda.yaml  sample.yaml
conf/models/: brazil.yaml  rwanda.yaml
deployment/azure/: azure-pipelines-delete.yaml  azure-pipelines-dev.yaml  ingress.yaml
deployment/helm/: prod.yaml
docs/: arch.md  data.md  dev.md  models.md
giga/app/: README.md  config.py  config_client.py  create_cellular_distance_cache.py  create_distance_cache.py  create_fiber_distance_cache.py  create_p2p_distance_cache.py  create_school_visibility_cache.py  dashboard.py  run_total_cost_scenario.py  update_schools.py
giga/compute/elevation/: elevation_profile_generator.py  elevation_utilities.py  open_elevation_model.py
giga/compute/graph/: greedy_distance_connector.py  pairwise_distance_model.py
giga/data/pipes/: data_tables.py
giga/data/sat/: cost_minimum_spanning_tree.py  cost_relational_graph.py  sat_cost_graph.py  sat_formula.py  sat_formula_old.py  sat_utils.py
giga/data/space/: connected_cost_graph.py  country_updater.py  data_space_builders.py  model_data_space.py
giga/data/stats/: result_stats.py
giga/data/store/: adls_store.py  data_store.py  gcs_store.py  local_fs_store.py  stores.py
giga/data/transforms/: giga_format.py  transform_cellular_br.py
giga/data/web/: giga_api_client.py
giga/models/components/: cellular_cost_model.py  electricity_cost_model.py  fiber_and_p2p_cost_model.py  fiber_cost_model.py  p2p_cost_model.py  sample_cost_model.py  satellite_cost_model.py
giga/models/scenarios/: minimum_cost_scenario.py  priority_scenario.py  sat_minimum_cost_scenario.py  scenario_dispatcher.py  single_technology_scenario.py
giga/report/cost/: appendix.py  chapter_cost_report.py  chapter_introduction.py  foreword.py  report.py  title_toc.py
giga/report/infra/: chapter_infra_report.py  chapter_introduction.py  disclaimer.py  foreword.py  report.py  title_toc.py
giga/report/merged/: conclusion.py  report.py  title_toc.py
giga/schemas/: cellular.py  distance_cache.py  geo.py  output.py  results.py  school.py  tech.py
giga/schemas/conf/: country.py  data.py  models.py  scenario.py
giga/utils/: countries_overview.py  globals.py  latex_reports.py  logging.py  notebooks.py  progress_bar.py  requests.py
giga/viz/: colors.py  plot_configs.py
giga/viz/notebooks/: cost_estimation_parameter_input.py  (+6 more)
notebooks/: README.md  cellular-data-rw.ipynb  component-drivers.ipynb  config_belize.json  cost-scenario.ipynb  fiber-model-rwanda.ipynb  fiber-model.ipynb  generateReport-PDF.ipynb  model-validation.ipynb  results-drilldown-dep.ipynb  results-drilldown.ipynb  rwanda-fiber-validation.ipynb  sat-scenario.ipynb
notebooks/configs/: config_constraint_bw_demand.json  config_constraint_cellular_zero_range.json  config_constraint_fiber_zero_range.json  config_constraint_p2p_zero_range.json  config_single_school_cellular_cost.json  config_single_school_connectivity_opex.json  config_single_school_electricity_opex.json  config_single_school_fiber_cost.json  config_single_school_satellite_cost.json  config_zero_electricity_opex.json  config_zero_install_cost.json  config_zero_mbps_opex.json  config_zero_solar_capex.json  config_zero_tech_opex.json
notebooks/dev/: documentation.ipynb  update-objstore.ipynb
notebooks/docs/: arch.ipynb  data.ipynb  dev.ipynb  main.ipynb  models.ipynb
notebooks/drivers/: Line-of-Sight.ipynb  component-drivers.ipynb  fiber-model-rwanda.ipynb  fiber-model.ipynb  model-component-example.ipynb
notebooks/pipeline/: cellular-data-br.ipynb  cellular-data-rw.ipynb  electricity-br.ipynb  electricity.ipynb
notebooks/test/: anonymized_test_fixtures_example_notebook.ipynb  rwanda-fiber-validation.ipynb
test/components/: test_components.py
test/core/: test_elevation_profile_generator.py  test_line_of_sight_model.py  test_open_elevation.py
test/models/: test_components.py  test_scenarios.py
test/schemas/: school.py
(+50 files in other folders)
