[tool.poetry]
name = "giga"
version = "0.2.2"
description = "Giga models for internet connectivity cost estimation"
authors = ["Max Nova <max.nova@actualhq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = ">=1.3.0"
geopandas = "^0.11.1"
numpy = "^1.23.3"
Shapely = "^1.8.4"
openpyxl = "^3.0.10"
pydantic = "^1.10.2"
seaborn = "^0.12.0"
folium = "^0.12.1.post1"
jupyter = "^1.0.0"
tqdm = "^4.64.1"
pytest = "^7.1.3"
haversine = "^2.7.0"
flake8 = "^5.0.4"
black = "^22.10.0"
hydra-core = "^1.2.0"
jupyterlab = "^3.5.0"
voila = "^0.4.0"
grip = "^4.6.1"
pykml = "^0.2.0"
scipy = "^1.10.0"
scikit-learn = "^1.2.1"
jupyterlab-widgets = "^3.0.3"
widgetsnbextension = "^4.0.3"
ipysheet = "^0.7.0"
networkx = "^3.0"

[tool.poetry.scripts]
total_cost_scenario = "giga.app.run_total_cost_scenario:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
