[tool.poetry]
name = "giga"
version = "0.3.9"
description = "Giga models for internet connectivity cost estimation"
authors = ["Max Nova <max.nova@actualhq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<3.12"
pandas = "1.5.3"
geopandas = "^0.11.1"
numpy = "^1.23.3"
Shapely = "^1.8.4"
openpyxl = "^3.0.10"
pydantic = "^1.10.2"
seaborn = "^0.12.0"
folium = "^0.12.1.post1"
jupyter = "^1.0.0"
tqdm = "^4.64.1"
pytest = "^7.1.3"
haversine = "^2.7.0"
flake8 = "^5.0.4"
black = "^22.10.0"
jupyterlab = "3.5.1"
voila = "^0.4.0"
grip = "^4.6.1"
pykml = "^0.2.0"
scipy = "^1.10.0"
scikit-learn = "^1.2.1"
networkx = "^3.0"
ortools = "^9.6.2534"
ipywidgets = "8.0.6"
plotly = "^5.14.1"
ujson = "^5.7.0"
jupyter-dash = "^0.4.2"
python-dotenv = "^1.0.0"
setuptools = "^67.7.2"
dash = "^2.9.3"
pypdf2 = "^3.0.1"
dash-bootstrap-components = "^1.4.1"
cdsdashboards = {extras = ["user"], version = "^0.6.3"}
jhsingle-native-proxy = "^0.8.0"
simpervisor = "0.4"

[tool.poetry.scripts]
total_cost_scenario = "giga.app.run_total_cost_scenario:main"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
