[tool.poetry]
name = "giga"
version = "0.3.12"
description = "Giga models for internet connectivity cost estimation"
authors = ["Max Nova <max.nova@actualhq.com>", "Nathan Eliason <nathan.eliason@actualhq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<3.12"
pandas = "1.5.3"
geopandas = "^0.11.1"
numpy = "1.24.3"
Shapely = "^1.8.4"
openpyxl = "^3.0.10"
pydantic = "^1.10.2"
seaborn = "^0.12.0"
folium = "^0.12.1.post1"
jupyter = "^1.0.0"
tqdm = "4.65.0"
pytest = "^7.1.3"
haversine = "^2.7.0"
flake8 = "^5.0.4"
black = "^22.10.0"
jupyterlab = "3.5.1"
jupyter_client = "7.4.1"
voila = "0.4.0"
grip = "^4.6.1"
pykml = "^0.2.0"
scipy = "^1.10.0"
scikit-learn = "^1.2.1"
networkx = "^3.0"
ortools = "^9.6.2534"
ipywidgets = "8.0.6"
plotly = "5.14.1"
ujson = "^5.7.0"
jupyter-dash = "^0.4.2"
python-dotenv = "^1.0.0"
setuptools = "^67.7.2"
dash = "2.11.1"
pypdf2 = "^3.0.1"
dash-bootstrap-components = "^1.4.1"
cdsdashboards = {extras = ["user"], version = "^0.6.3"}
jhsingle-native-proxy = "^0.8.0"
simpervisor = "0.4"
google-cloud-storage = "^2.9.0"
gcsfs = "^2023.5.0"
azure-storage-blob = "^12.16.0"
reportlab = "^4.0.4"
selenium = "4.10.0"
kaleido = "0.2.1"
pylatex = "^1.4.1"
async-timeout = "4.0.2"
exceptiongroup = "1.1.2"
fonttools = "4.41.1"
googleapis-common-protos = "1.59.1"
joblib = "1.3.1"
Markdown = "3.4.3"
pathspec = "0.11.1"
protobuf = "4.23.4"
tenacity = "8.2.2"
typing_extensions = "4.4.0"
ipykernel = "6.23.1"
ipython = "8.12.2"
jupyter-server = "1.24.0"
jupyter_core = "5.3.0"
jupyterhub = "4.0.0"
jupyterlab-widgets = "3.0.7"
jupyterlab_server = "2.22.1"
matplotlib = "3.7.1"
notebook = "6.5.4"
widgetsnbextension = "4.0.7"
nbclassic = "1.0.0"
nbclient = "0.7.4"
nbconvert = "7.4.0"
nbformat = "5.9.0"



[tool.poetry.scripts]
total_cost_scenario = "giga.app.run_total_cost_scenario:main"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
